# genai-router

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  compose.yaml  main.py  project_config.md  pyproject.toml  requirements-dev.txt  requirements.txt  router.py  workflow_state.md
.cursor/rules/: adapter.spec.mdc
.cursor/rules/general/: always.mdc  async_fastapi_auto.mdc  full_implementation.mdc  linting_packaging.mdc  sphinx_docs.mdc  tdd_general.mdc
.cursor/rules/project/: adapter_rules.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
config/: backend_loader.py  backends.yaml  settings.py
docs/: Makefile  api_reference.rst  conf.py  index.rst  usage.rst
handlers/: http_handler.py  ollama_handler.py
middleware/: auth_middleware.py  logging_middleware.py  metrics_middleware.py  ratelimit_middleware.py
schemas/: chat.py  models.py
scripts/: openai_chat.py  reload_stack.sh  router_chat.py
tasks/: todo.md
tests/: test_auth.py  test_backend_loader.py  test_http_handler.py  test_metrics.py  test_models.py  test_rate_limit.py  test_router.py  test_tracing.py
